# pyweight

./: LICENSE  README.md  TODO  pyproject.toml  pyweight.py  pyweight.sh  setup.cfg  wl.py  wlbodymodel.py  wldatamodel.py  wlplot.py  wlprefs.py  wlprofile.py  wlsettings.py  wmabout.py  wmbodymodel.py  wmdatamodel.py  wmplot.py  wmprefs.py  wmprofile.py  wmsettings.py
data/: resources.qrc
data/icons/hicolor/: index.theme
data/windows/: installer.iss  pyweight.spec
docs/: build.sh
docs/html/: Basic Usage.html  Introduction.html  Technical Concepts.html  Weight Management with PyWeight.html  index.html
docs/md/: Basic Usage.md  Introduction.md  Technical Concepts.md  Weight Management with PyWeight.md  Weight Management with Pyweight.md  index.md
licenses/: matplotlib.txt
pyweight/: __init__.py  __main__.py  main.py  qresources.py  wmabout.py  wmbodymodel.py  wmdatamodel.py  wmhelp.py  wmmainwindow.py  wmplot.py  wmprefs.py  wmprofile.py  wmsettings.py  wmutils.py
pyweight/ui/: about.ui  main.ui  prefs.ui  profilemanager.ui
tests/: test_bodymodel.py  test_datamodel.py  test_mainwindow.py  test_profile.py  test_settings.py
ui/: about.ui  config.ui  main.ui  prefs.ui  profilemanager.ui  settings.ui
