[metadata]
name = pyweight
version = attr: pyweight.__VERSION__
description: A simple weight management program
long_description = file: README.md
license = GPL3-only
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://afontenot/pyweight/issues

[options]
zip_safe = false
python_requires >= 3.6
packages = find:
test_suite = tests
setup_requires = setuptools >= 47
install_requires =
    PyQt5
    matplotlib
    scipy

[flake8]
select = C,E,F,W,B,B950
extend-ignore = E203,E501

[tool:pytest]
qt_api=pyqt5

[options.entry_points]
console_scripts =
    pyweight = pyweight.__main__:main

[options.package_data]
pyweight = ui/*, images/*

[options.packages.find]
exclude = .
